--- a/index.html
+++ b/index.html
@@ -1,137 +1,24 @@
-<div id="header"></div>
-<div class="left"></div>
-<div class="stuff">
-  <br><br>
-  <h1>Resume</h1>
-  <h2>Anderson</h2>
-  <hr />
-  <br>
-  <p class="head">Interests</p>
-  <style>
-  * {
-  max-width: 700px;
-  margin: auto;
-}
-
-
-/*body {
-    min-width: 500px;
-}*/
-
-div {
-  border-radius: 5px;
-}
-
-#header {
-  height: 40px;
-  width: 100%;
-  background-color: #32cd32;
-  position: fixed;
-  z-index: 1;
-}
-
-#title {
-  margin-left: 3%;
-}
-
-#footer {
-  height: 50px;
-  width: 100%;
-  background-color: #32cd32;
-  clear: both;
-  position: relative;
-}
-
-.left {
-  height: 1000px;
-  width: 45px;
-  background-color: #32cd32;
-  float: left;
-  position: fixed;
-}
-
-.right {
-  height: 1000px;
-  width: 45px;
-  background-color: #32cd32;
-  float: right;
-  position: inherit;
-}
-
-.stuff {
-  display: inline-block;
-  margin-top: 6px;
-  margin-left: 55px;
-  width: 75%;
-  height: 1000px;
-}
-
-p,
-li {
-  font-family: 'Cormorant Garamond';
-}
-
-.head {
-  font-size: 20px;
-}
-
-#name {
-  font-family: Sacramento;
-  float: right;
-  margin-top: 10px;
-  margin-right: 4%;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-@media only screen and (max-width: 430px) {
-  .left,
-  .right {
-    display: none;
-  }
-  .stuff {
-    width: 100%;
-    margin-left: 10px;
-  }
-}
-  </style>
-  <ul>
-    <li>Drawing</li>
-    <li>Photography</li>
-    <li>Design</li>
-    <li>Programming</li>
-    <li>Computer Science</li>
-  </ul>
-  <p class="head">Skills</p>
-  <ul>
-    <li>Web Design with HTML & CSS</li>
-  </ul>
-  <p class="head">Education</p>
-  <ul>
-    <a href="http://www.wiltonhighschool.org/pages/Wilton_High_School">
-      <li>Wilton High School</li>
-    </a>
-    <!--Link-->
-    <a href="https://www.silvermineart.org/">
-      <li>Silvermine School of Arts</li>
-    </a>
-    <li>Codeacademy</li>
-  </ul>
-  <p class="head">Experience</p>
-  <ul>
-    <li>Student Technology Intern for Wilton School District</li>
-    <li>Babysitter</li>
-  </ul>
-  <p class="head">Extracurriculars</p>
-  <ul>
-    <li>Recycling Club</li>
-    <li>Gardening Club</li>
-    <li>Book Club</li>
-  </ul>
-</div>
-<div class="right"></div>
-<div id="footer">
-  <h2 id="name">Anderson</h2></div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Offline</title>
+</head>
+<body style="margin:3em;font-family:sans-serif">
+  <h2>Offline</h2>
+  <p>This site is offline for maintenance.</p>
+  <!--       
+    Adding some hidden content so that IE "Friendly Errors" don't keep
+    this message from displaying. (It will show a "friendly" 404
+    error if the content isn't at least 512 bytes.)
+    This is mostly a problem for IE6 which has "Friendly Errors" on by default.
+    See http://weblogs.asp.net/scottgu/App_5F00_Offline.htm-and-working-around-the-_2200_IE-Friendly-Errors_2200_-feature
+    
+    <h2>This site is offline.</h2>
+    <h2>This site is offline.</h2>
+    <h2>This site is offline.</h2>
+    <h2>This site is offline.</h2>
+    <h2>This site is offline.</h2>
+    -->
+</body>
+</html>
