--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             margin: 0;
             padding: 0;
             font-family: sans-serif;
-            background-image: url("UnderConstruction.jfif");
+            background-image: url("https://th.bing.com/th/id/R.90b0dcad8c8e8cf91af7a9d76abc3646?rik=zTAET8K0O0md9g&riu=http%3a%2f%2fpacomondragon.com%2fimg%2funder-construction.jpg&ehk=sp9vLL1r%2bC%2f7x7mKsRBPyjpXaAMsgGPlVIh7IKdG0pc%3d&risl=1&pid=ImgRaw&r=0");
             background-size: cover;
             background-position: top center; /* Adjusted position */
             background-repeat: no-repeat;
